<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="operand1">Операнд 1:</string>
    <string name="operand2">Операнд 2:</string>
    <string name="operation">Операция:</string>
    <string name="btn_calc">Посчитать</string>
    <string name="operations_set">+,-,*,/</string>
    <string name="result_text">Результат:</string>

    <string name="unknown_operation">операция некорректная!</string>
    <string name="some_error">Ошибка, проверьте входные данные</string>


</resources>